# Operational-Research

DeInelasticTrussPython /: DETruss.py  InelasticTruss.py  Population.py  main.py
VRPGeneticAlg/: CMakeLists.txt  Customer.cpp  Customer.h  Depot.cpp  Depot.h  VRPGenetic.cpp  VRPGenetic.h  main.cpp
VRPGeneticAlgPython/: Customer.py  Depot.py  Location.py  Population.py  VrpGe.py  main.py
